--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:: iRONMEN ::</title>
     <style>
         body {
-            background-color: #2b2b2b;
+            background-color: #222;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
             margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            padding: 0;
         }
         iframe {
-            border: none;
-            width: 90vw; /* Nästan hela bredden */
-            height: 50.625vw; /* 16:9 proportioner baserat på bredd */
-            max-width: 960px;
-            max-height: 540px;
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
         }
-        @media (max-width: 768px) {
-            iframe {
-                width: 100vw;
-                height: 56.25vw; /* 16:9 proportioner */
-            }
+        h2 {
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
-    <iframe 
-        src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" 
-        allowfullscreen>
-    </iframe>
+    <h1>:: iRONMEN ::</h1>
+
+    <h2>iRONMEN 2024</h2>
+    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
+
+    <h2>iRONMEN 2022</h2>
+    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
+
+    <h2>iRONMEN 2020</h2>
+    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2020-720p/2" allowfullscreen></iframe>
+
+    <h2>iRONMEN 2019</h2>
+    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2019/e" allowfullscreen></iframe>
+
+    <h2>iRONMEN 2018</h2>
+    <iframe width="960" height="540" src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
+
 </body>
 </html>
