--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
     <style>
         body {
             background-color: #222;
-            color: white;
-            font-family: Arial, sans-serif;
             text-align: center;
             margin: 0;
-            padding: 0;
+            padding: 20px 0;
         }
-        iframe {
-            display: block;
-            margin: 20px auto;
-            max-width: 100%;
+        .video-container {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 */
+            height: 0;
+            margin: 40px auto; /* extra luft mellan videorna */
+            max-width: 960px;
         }
-        h2 {
-            margin-top: 40px;
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
 <body>
-    <h1>:: iRONMEN ::</h1>
-
-    <h2>iRONMEN 2024</h2>
-    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
-
-    <h2>iRONMEN 2022</h2>
-    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
-
-    <h2>iRONMEN 2020</h2>
-    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2020-720p/2" allowfullscreen></iframe>
-
-    <h2>iRONMEN 2019</h2>
-    <iframe width="960" height="540" src="https://odysee.com/$/embed/iRONMEN-2019/e" allowfullscreen></iframe>
-
-    <h2>iRONMEN 2018</h2>
-    <iframe width="960" height="540" src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
-
+    <div class="video-container">
+        <iframe src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+        <iframe src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+        <iframe src="https://odysee.com/$/embed/iRONMEN-2020-720p/2" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+        <iframe src="https://odysee.com/$/embed/iRONMEN-2019/e" allowfullscreen></iframe>
+    </div>
+    <div class="video-container">
+        <iframe src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
