--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
-<style>
-body {
-  background-color: #111; /* Mörk bakgrund */
-  color: #fff;
-  font-family: sans-serif;
-  text-align: center; /* Centrerar innehåll */
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>:: iRONMEN ::</title>
+  <style>
+    body {
+      background-color: #111;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9-format */
-  height: 0;
-  overflow: hidden;
-  margin: 0 auto 50px auto; /* Centrerad och 50px space */
-  max-width: 800px; /* Maxbredd på dator */
-  width: 100%;
-}
+    .video-container {
+      position: relative;
+      width: 100%;
+      max-width: 800px; /* Begränsad bredd på desktop */
+      aspect-ratio: 16 / 9; /* Håller 16:9 */
+      margin-bottom: 50px; /* Space mellan videorna */
+    }
 
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-</style>
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <div class="video-container">
+    <iframe src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
+  </div>
 
-<div class="video-container">
-  <iframe src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
-</div>
+  <div class="video-container">
+    <iframe src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
+  </div>
 
-<div class="video-container">
-  <iframe src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
-</div>
+  <div class="video-container">
+    <iframe src="https://odysee.com/$/embed/iRONMEN-2020-720p/2" allowfullscreen></iframe>
+  </div>
 
-<div class="video-container">
-  <iframe src="https://odysee.com/$/embed/iRONMEN-2020-720p/2" allowfullscreen></iframe>
-</div>
+  <div class="video-container">
+    <iframe src="https://odysee.com/$/embed/iRONMEN-2019/e" allowfullscreen></iframe>
+  </div>
 
-<div class="video-container">
-  <iframe src="https://odysee.com/$/embed/iRONMEN-2019/e" allowfullscreen></iframe>
-</div>
-
-<div class="video-container">
-  <iframe src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
-</div>
+  <div class="video-container">
+    <iframe src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
+  </div>
+</body>
+</html>
