--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 </head>
 <body>
   <div class="video-container">
+    <a href='http://www.freevisitorcounters.com'>more information</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ce92e2cdf104551113432a7f8f5e58c8ec0c842f'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1384822/t/13"></script>
+  </div>
+  
+  <div class="video-container">
     <iframe src="https://odysee.com/$/embed/iRONMEN-2024-H264-1080p/f" allowfullscreen></iframe>
   </div>
 
