--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="kebabstugan.png">
   <meta charset="UTF-8">
-  <title>:: iRONMEN ::</title>
+  <title>i R O N M E N</title>
   <style>
     body {
       background-color: #111;
