--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <iframe src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
   </div>
 <p> </p><center>
-  <a href="https://info.flagcounter.com/MJaz"><img src="https://s01.flagcounter.com/count2/MJaz/bg_000000/txt_FFFFFF/border_CCCCCC/columns_3/maxflags_12/viewers_3/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+  <script data-goatcounter="https://hegernat.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </center>
 </html>
