--- a/2025.html
+++ b/2025.html
@@ -5,20 +5,16 @@
   <title>i R O N M E N</title>
   <link rel="icon" type="image/png" href="kebabstugan.png">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
   <button id="menu-toggle">☰</button>
-  <h1>VÄLKÅMEN TILL KEBABSTUGAN!</h1><p>
-  <h3>Kom ut och sätt er</h2>
+  <h1>2025</h1>
 </header>
 
 <nav id="side-menu">
-  <a href="2025.html">2025</a>
+  <a href="index.html">Hem</a>
   <a href="2024.html">2024</a>
   <a href="2022.html">2022</a>
   <a href="2021.html">2021</a>
@@ -32,13 +28,11 @@
     <div class="video-container">
       <iframe src="https://odysee.com/$/embed/IRONMEN-2025-1080p/e" allowfullscreen></iframe>
     </div>
-
     <div class="text-box">
-      <h2>2025</h2>
       <p>
 GEHÖR, VERNER & ASEA härjar vidare. Taskig, tjock joggarhäxa ringer pålicen på VERNER & KNOR - ärendet läggs ned. Get fucked!<p>
 Shoutout till OTG crew, och RIP Ozzy!!
-      </p>
+</p>
     </div>
   </section>
 </main>
@@ -53,4 +47,3 @@ Shoutout till OTG crew, och RIP Ozzy!!
 
 </body>
 </html>
-
