--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <header>
   <button id="menu-toggle">☰</button>
-  <h1>VÄLKÅMEN TILL KEBABSTUGAN!</h1><p>
-  <h3>Kom ut och sätt er</h2>
+  <h1>VELKÅMEN TILL KEBABSTUGAN!</h1>
 </header>
 
 <nav id="side-menu">
@@ -36,7 +35,7 @@
     <div class="text-box">
       <h2>2025</h2>
       <p>
-GEHÖR, VERNER & ASEA härjar vidare. Taskig, tjock joggarhäxa ringer pålicen på VERNER & KNOR - ärendet läggs ned. Get fucked!<p>
+GEHÖR, VERNER & ASEA m.fl härjar vidare. Taskig, tjock joggarhäxa ringer pålicen på VERNER & KNOR - ärendet läggs ned. Get fucked!<p>
 Shoutout till OTG crew, och RIP Ozzy!!
       </p>
     </div>
