--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="sv">
 <head>
 <meta charset="UTF-8">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://kebabstugan.com">
+<meta property="og:title" content="i R O N M E N">
+<meta property="og:description" content="IMN's kebabstuga!">
+<meta property="og:image" content="https://kebabstugan.com/kebabstugan.png">
+
 <title>i R O N M E N</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="kebabstugan.png">
