--- a/2024.html
+++ b/2024.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 <header>
-<h1>iRONMEN (2024)</h1>
-<div id="menu"></div>
+  <div id="logo"></div>
+  <div id="menu"></div>
 </header>
+
 
 
 <main class="page-container">
