--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://kebabstugan.com">
 <meta property="og:title" content="i R O N M E N">
-<meta property="og:description" content="VELKÅMEN TILL KEBABSTUGAN! KOM UT OCH SET DIG! Här hittar du klottriga videos från järngossarna.">
+<meta property="og:description" content="Här finns Järngossarnas sprutvideor m.m.">
 <meta property="og:image" content="https://kebabstugan.com/kebabstugan.png">
 
 <title>i R O N M E N</title>
@@ -18,14 +18,13 @@
 </head>
 <body>
 <header>
-<h1>iMNs kebabstuga!</h1>
-<div id="menu"></div>
+  <div id="logo"></div>
+  <div id="menu"></div>
 </header>
-
 
 <main class="page-container">
 <section class="intro">
-<p>Välkommen till Järngubbarnas experimentiella kebabstuga. Här finner du klottervideor, kebab som ej åldrats väl och möjligen bilder m.m. längre fram i tiden.<p>Vi bor i huvudsak på instagram så <a href="https://www.instagram.com/imn.crew/" target="_blank" rel="noopener noreferrer">besök oss</a> gärna där!<p>Vill du se fler, kortare, mindre officiella videor så kan du kolla <a href="https://odysee.com/@vernerrr:5/" target="_blank" rel="noopener noreferrer">VERNERs arkiv</a> på Odysee.com</p>
+<p>Välkommen till Järn-Johnnysarnas officiella kebabstuga!<p>Vi finns på instagram så <a href="https://www.instagram.com/imn.crew/" target="_blank" rel="noopener noreferrer">besök oss</a> gärna där! Fler klipp och videor finns på <a href="https://odysee.com/@vernerrr:5/" target="_blank" rel="noopener noreferrer">VERNERs arkiv</a> på Odysee.com</p>
 </section>
 
 
