--- a/logo.html
+++ b/logo.html
@@ -1,5 +1,5 @@
 <!-- FILE: logo.html -->
 <div class="site-logo">
-  <img src="IRONMEN.png" alt="iRONMEN">
+  <img src="ironmen.png" alt="iRONMEN">
 </div>
 
