--- a/2022.html
+++ b/2022.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 <meta charset="UTF-8">
-<title>2022 – KEBABSTUGAN</title>
+<title>i R O N M E N - 2022</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="kebabstugan.png">
 <link rel="stylesheet" href="style.css">
@@ -19,6 +19,7 @@
 <iframe src="https://odysee.com/$/embed/iRONMEN-22/1" allowfullscreen></iframe>
 </div>
 <div class="text-box">
+<h2>2022</h2>
 <p>SIKO, VERNER, WINK & ASEA avnjuter en mestadels lugn sommar.<p>Shoutouts till WEOK!</p>
 </div>
 </section>
