--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 <main class="page-container">
 <section class="intro">
-<p>Välkommen till Järn-Johnnysarnas officiella kebabstuga!<p>Vi finns på instagram så <a href="https://www.instagram.com/imn.crew/" target="_blank" rel="noopener noreferrer">besök oss</a> gärna där! Fler klipp och videor finns på <a href="https://odysee.com/@vernerrr:5/" target="_blank" rel="noopener noreferrer">VERNERs arkiv</a> på Odysee.com</p>
+<p>Välkommen till Järn-Johnnysarnas officiella kebappstuga!<p>Vi finns på instagram så <a href="https://www.instagram.com/imn.crew/" target="_blank" rel="noopener noreferrer">besök oss</a> gärna där! Fler klipp och videor finns i <a href="https://odysee.com/@vernerrr:5/" target="_blank" rel="noopener noreferrer">VERNERs arkiv</a> på Odysee.com<p>
+Senaste videon finns nedan, eller välj ett årtal i menyn längre upp.</p>
 </section>
 
 
