--- a/2018.html
+++ b/2018.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
 <meta charset="UTF-8">
-<title>2018 – KEBABSTUGAN</title>
+<title>i R O N M E N - 2018</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="kebabstugan.png">
 <link rel="stylesheet" href="style.css">
@@ -19,7 +19,8 @@
     <iframe src="https://odysee.com/$/embed/IRONMEN-2018/d" allowfullscreen></iframe>
 </div>
 <div class="text-box">
-<p>VERNER, WINK & BARS klottrar runt i Torvalla/Östersund. Legenden KMS lämnar jordelivet. Vila i frid Tony!</p>
+<h2>2018</h2>
+<p>VERNER, WINK & BARS klottrar runt i Torvalla/Östersund. Legenden KMS lämnar jordelivet - Vila i frid Tony!</p>
 </div>
 </section>
 </main>
