--- a/logo.html
+++ b/logo.html
@@ -1,5 +1,5 @@
 <!-- FILE: logo.html -->
 <div class="site-logo">
-  <img src="ironmen.png" alt="i R O N M E N">
+  <img src="ironmenv2.png" alt="i R O N M E N">
 </div>
 
