--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,4 @@
-<p><nav class="top-nav">
-<a href="index.html">Hem</a>
+<p><nav class="top-nav">s
 <a href="2025.html">2025</a>
 <a href="2024.html">2024</a>
 <a href="2023.html">2023</a>
