--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<p><nav class="top-nav">s
+<nav class="top-nav">
 <a href="2025.html">2025</a>
 <a href="2024.html">2024</a>
 <a href="2023.html">2023</a>
@@ -7,4 +7,4 @@
 <a href="2020.html">2020</a>
 <a href="2019.html">2019</a>
 <a href="2018.html">2018</a>
-</nav><P>
+</nav>
